y.output
   0  $accept : program $end

   1  program : stmts

   2  stmts : stmt ';' stmts
   3        |

   4  stmt : TK_IDENTIFIER ':' type '=' factor
   5       | TK_IDENTIFIER ':' type '[' LIT_INTEGER ']' optinit
   6       | TK_IDENTIFIER '=' expr
   7       | TK_IDENTIFIER '[' expr ']' '=' expr
   8       | KW_IF '(' expr ')' KW_THEN stmts optelse
   9       | KW_WHILE '(' expr ')' stmt
  10       | KW_FOR '(' expr ';' expr ';' expr ')'
  11       | KW_READ factor
  12       | KW_RETURN factor
  13       | KW_PRINT factor
  14       | '{' stmts '}'

  15  type : KW_BYTE
  16       | KW_SHORT
  17       | KW_LONG
  18       | KW_FLOAT
  19       | KW_DOUBLE

  20  literal : LIT_INTEGER
  21          | LIT_DOUBLE
  22          | LIT_REAL
  23          | LIT_CHAR
  24          |

  25  expr : expr '+' term
  26       | expr '-' term
  27       | expr OPERATOR_NE term
  28       | expr OPERATOR_OR term
  29       | expr OPERATOR_EQ term
  30       | expr OPERATOR_LE term
  31       | expr OPERATOR_GE term
  32       | term
  33       |

  34  term : term '*' factor
  35       | term '/' factor
  36       | term OPERATOR_AND factor
  37       | factor

  38  factor : literal
  39         | LIT_STRING
  40         | '(' expr ')'

  41  optinit : literal ' ' optinit
  42          |

  43  optelse : KW_ELSE stmts
  44          |

state 0
	$accept : . program $end  (0)
	stmts : .  (3)

	KW_IF  shift 1
	KW_WHILE  shift 2
	KW_FOR  shift 3
	KW_READ  shift 4
	KW_RETURN  shift 5
	KW_PRINT  shift 6
	TK_IDENTIFIER  shift 7
	'{'  shift 8
	$end  reduce 3

	program  goto 9
	stmts  goto 10
	stmt  goto 11


state 1
	stmt : KW_IF . '(' expr ')' KW_THEN stmts optelse  (8)

	'('  shift 12
	.  error


state 2
	stmt : KW_WHILE . '(' expr ')' stmt  (9)

	'('  shift 13
	.  error


state 3
	stmt : KW_FOR . '(' expr ';' expr ';' expr ')'  (10)

	'('  shift 14
	.  error


state 4
	stmt : KW_READ . factor  (11)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	';'  reduce 24

	factor  goto 21
	literal  goto 22


state 5
	stmt : KW_RETURN . factor  (12)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	';'  reduce 24

	factor  goto 23
	literal  goto 22


state 6
	stmt : KW_PRINT . factor  (13)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	';'  reduce 24

	factor  goto 24
	literal  goto 22


state 7
	stmt : TK_IDENTIFIER . ':' type '=' factor  (4)
	stmt : TK_IDENTIFIER . ':' type '[' LIT_INTEGER ']' optinit  (5)
	stmt : TK_IDENTIFIER . '=' expr  (6)
	stmt : TK_IDENTIFIER . '[' expr ']' '=' expr  (7)

	':'  shift 25
	'='  shift 26
	'['  shift 27
	.  error


state 8
	stmt : '{' . stmts '}'  (14)
	stmts : .  (3)

	KW_IF  shift 1
	KW_WHILE  shift 2
	KW_FOR  shift 3
	KW_READ  shift 4
	KW_RETURN  shift 5
	KW_PRINT  shift 6
	TK_IDENTIFIER  shift 7
	'{'  shift 8
	'}'  reduce 3

	stmts  goto 28
	stmt  goto 11


state 9
	$accept : program . $end  (0)

	$end  accept


state 10
	program : stmts .  (1)

	.  reduce 1


state 11
	stmts : stmt . ';' stmts  (2)

	';'  shift 29
	.  error


12: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
12: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
12: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
12: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
12: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
12: reduce/reduce conflict (reduce 24, reduce 33) on ')'
12: reduce/reduce conflict (reduce 24, reduce 33) on '+'
12: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 12
	stmt : KW_IF '(' . expr ')' KW_THEN stmts optelse  (8)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 31
	literal  goto 22
	term  goto 32


13: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
13: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
13: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
13: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
13: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
13: reduce/reduce conflict (reduce 24, reduce 33) on ')'
13: reduce/reduce conflict (reduce 24, reduce 33) on '+'
13: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 13
	stmt : KW_WHILE '(' . expr ')' stmt  (9)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 33
	literal  goto 22
	term  goto 32


14: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
14: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
14: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
14: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
14: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
14: reduce/reduce conflict (reduce 24, reduce 33) on ';'
14: reduce/reduce conflict (reduce 24, reduce 33) on '+'
14: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 14
	stmt : KW_FOR '(' . expr ';' expr ';' expr ')'  (10)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 34
	literal  goto 22
	term  goto 32


state 15
	literal : LIT_INTEGER .  (20)

	.  reduce 20


state 16
	literal : LIT_REAL .  (22)

	.  reduce 22


state 17
	literal : LIT_CHAR .  (23)

	.  reduce 23


state 18
	factor : LIT_STRING .  (39)

	.  reduce 39


19: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
19: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
19: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
19: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
19: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
19: reduce/reduce conflict (reduce 24, reduce 33) on ')'
19: reduce/reduce conflict (reduce 24, reduce 33) on '+'
19: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 19
	factor : '(' . expr ')'  (40)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 35
	literal  goto 22
	term  goto 32


state 20
	literal : LIT_DOUBLE .  (21)

	.  reduce 21


state 21
	stmt : KW_READ factor .  (11)

	.  reduce 11


state 22
	factor : literal .  (38)

	.  reduce 38


state 23
	stmt : KW_RETURN factor .  (12)

	.  reduce 12


state 24
	stmt : KW_PRINT factor .  (13)

	.  reduce 13


state 25
	stmt : TK_IDENTIFIER ':' . type '=' factor  (4)
	stmt : TK_IDENTIFIER ':' . type '[' LIT_INTEGER ']' optinit  (5)

	KW_BYTE  shift 36
	KW_SHORT  shift 37
	KW_LONG  shift 38
	KW_FLOAT  shift 39
	KW_DOUBLE  shift 40
	.  error

	type  goto 41


26: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
26: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
26: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
26: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
26: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
26: reduce/reduce conflict (reduce 24, reduce 33) on ';'
26: reduce/reduce conflict (reduce 24, reduce 33) on '+'
26: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 26
	stmt : TK_IDENTIFIER '=' . expr  (6)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 42
	literal  goto 22
	term  goto 32


27: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
27: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
27: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
27: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
27: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
27: reduce/reduce conflict (reduce 24, reduce 33) on ']'
27: reduce/reduce conflict (reduce 24, reduce 33) on '+'
27: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 27
	stmt : TK_IDENTIFIER '[' . expr ']' '=' expr  (7)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	']'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 43
	literal  goto 22
	term  goto 32


state 28
	stmt : '{' stmts . '}'  (14)

	'}'  shift 44
	.  error


state 29
	stmts : stmt ';' . stmts  (2)
	stmts : .  (3)

	KW_IF  shift 1
	KW_WHILE  shift 2
	KW_FOR  shift 3
	KW_READ  shift 4
	KW_RETURN  shift 5
	KW_PRINT  shift 6
	TK_IDENTIFIER  shift 7
	'{'  shift 8
	$end  reduce 3
	KW_ELSE  reduce 3
	';'  reduce 3
	'}'  reduce 3

	stmts  goto 45
	stmt  goto 11


state 30
	term : factor .  (37)

	.  reduce 37


state 31
	stmt : KW_IF '(' expr . ')' KW_THEN stmts optelse  (8)
	expr : expr . '+' term  (25)
	expr : expr . '-' term  (26)
	expr : expr . OPERATOR_NE term  (27)
	expr : expr . OPERATOR_OR term  (28)
	expr : expr . OPERATOR_EQ term  (29)
	expr : expr . OPERATOR_LE term  (30)
	expr : expr . OPERATOR_GE term  (31)

	OPERATOR_LE  shift 46
	OPERATOR_GE  shift 47
	OPERATOR_EQ  shift 48
	OPERATOR_NE  shift 49
	OPERATOR_OR  shift 50
	')'  shift 51
	'+'  shift 52
	'-'  shift 53
	.  error


state 32
	expr : term .  (32)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 32
	OPERATOR_GE  reduce 32
	OPERATOR_EQ  reduce 32
	OPERATOR_NE  reduce 32
	OPERATOR_OR  reduce 32
	';'  reduce 32
	']'  reduce 32
	')'  reduce 32
	'+'  reduce 32
	'-'  reduce 32


state 33
	stmt : KW_WHILE '(' expr . ')' stmt  (9)
	expr : expr . '+' term  (25)
	expr : expr . '-' term  (26)
	expr : expr . OPERATOR_NE term  (27)
	expr : expr . OPERATOR_OR term  (28)
	expr : expr . OPERATOR_EQ term  (29)
	expr : expr . OPERATOR_LE term  (30)
	expr : expr . OPERATOR_GE term  (31)

	OPERATOR_LE  shift 46
	OPERATOR_GE  shift 47
	OPERATOR_EQ  shift 48
	OPERATOR_NE  shift 49
	OPERATOR_OR  shift 50
	')'  shift 57
	'+'  shift 52
	'-'  shift 53
	.  error


state 34
	stmt : KW_FOR '(' expr . ';' expr ';' expr ')'  (10)
	expr : expr . '+' term  (25)
	expr : expr . '-' term  (26)
	expr : expr . OPERATOR_NE term  (27)
	expr : expr . OPERATOR_OR term  (28)
	expr : expr . OPERATOR_EQ term  (29)
	expr : expr . OPERATOR_LE term  (30)
	expr : expr . OPERATOR_GE term  (31)

	OPERATOR_LE  shift 46
	OPERATOR_GE  shift 47
	OPERATOR_EQ  shift 48
	OPERATOR_NE  shift 49
	OPERATOR_OR  shift 50
	';'  shift 58
	'+'  shift 52
	'-'  shift 53
	.  error


state 35
	expr : expr . '+' term  (25)
	expr : expr . '-' term  (26)
	expr : expr . OPERATOR_NE term  (27)
	expr : expr . OPERATOR_OR term  (28)
	expr : expr . OPERATOR_EQ term  (29)
	expr : expr . OPERATOR_LE term  (30)
	expr : expr . OPERATOR_GE term  (31)
	factor : '(' expr . ')'  (40)

	OPERATOR_LE  shift 46
	OPERATOR_GE  shift 47
	OPERATOR_EQ  shift 48
	OPERATOR_NE  shift 49
	OPERATOR_OR  shift 50
	')'  shift 59
	'+'  shift 52
	'-'  shift 53
	.  error


state 36
	type : KW_BYTE .  (15)

	.  reduce 15


state 37
	type : KW_SHORT .  (16)

	.  reduce 16


state 38
	type : KW_LONG .  (17)

	.  reduce 17


state 39
	type : KW_FLOAT .  (18)

	.  reduce 18


state 40
	type : KW_DOUBLE .  (19)

	.  reduce 19


state 41
	stmt : TK_IDENTIFIER ':' type . '=' factor  (4)
	stmt : TK_IDENTIFIER ':' type . '[' LIT_INTEGER ']' optinit  (5)

	'='  shift 60
	'['  shift 61
	.  error


state 42
	stmt : TK_IDENTIFIER '=' expr .  (6)
	expr : expr . '+' term  (25)
	expr : expr . '-' term  (26)
	expr : expr . OPERATOR_NE term  (27)
	expr : expr . OPERATOR_OR term  (28)
	expr : expr . OPERATOR_EQ term  (29)
	expr : expr . OPERATOR_LE term  (30)
	expr : expr . OPERATOR_GE term  (31)

	OPERATOR_LE  shift 46
	OPERATOR_GE  shift 47
	OPERATOR_EQ  shift 48
	OPERATOR_NE  shift 49
	OPERATOR_OR  shift 50
	'+'  shift 52
	'-'  shift 53
	';'  reduce 6


state 43
	stmt : TK_IDENTIFIER '[' expr . ']' '=' expr  (7)
	expr : expr . '+' term  (25)
	expr : expr . '-' term  (26)
	expr : expr . OPERATOR_NE term  (27)
	expr : expr . OPERATOR_OR term  (28)
	expr : expr . OPERATOR_EQ term  (29)
	expr : expr . OPERATOR_LE term  (30)
	expr : expr . OPERATOR_GE term  (31)

	OPERATOR_LE  shift 46
	OPERATOR_GE  shift 47
	OPERATOR_EQ  shift 48
	OPERATOR_NE  shift 49
	OPERATOR_OR  shift 50
	']'  shift 62
	'+'  shift 52
	'-'  shift 53
	.  error


state 44
	stmt : '{' stmts '}' .  (14)

	.  reduce 14


state 45
	stmts : stmt ';' stmts .  (2)

	.  reduce 2


state 46
	expr : expr OPERATOR_LE . term  (30)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 63


state 47
	expr : expr OPERATOR_GE . term  (31)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 64


state 48
	expr : expr OPERATOR_EQ . term  (29)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 65


state 49
	expr : expr OPERATOR_NE . term  (27)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 66


state 50
	expr : expr OPERATOR_OR . term  (28)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 67


state 51
	stmt : KW_IF '(' expr ')' . KW_THEN stmts optelse  (8)

	KW_THEN  shift 68
	.  error


state 52
	expr : expr '+' . term  (25)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 69


state 53
	expr : expr '-' . term  (26)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	literal  goto 22
	term  goto 70


state 54
	term : term OPERATOR_AND . factor  (36)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 71
	literal  goto 22


state 55
	term : term '*' . factor  (34)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 72
	literal  goto 22


state 56
	term : term '/' . factor  (35)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	']'  reduce 24
	')'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 73
	literal  goto 22


state 57
	stmt : KW_WHILE '(' expr ')' . stmt  (9)

	KW_IF  shift 1
	KW_WHILE  shift 2
	KW_FOR  shift 3
	KW_READ  shift 4
	KW_RETURN  shift 5
	KW_PRINT  shift 6
	TK_IDENTIFIER  shift 7
	'{'  shift 8
	.  error

	stmt  goto 74


58: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_LE
58: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_GE
58: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_EQ
58: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_NE
58: reduce/reduce conflict (reduce 24, reduce 33) on OPERATOR_OR
58: reduce/reduce conflict (reduce 24, reduce 33) on ';'
58: reduce/reduce conflict (reduce 24, reduce 33) on '+'
58: reduce/reduce conflict (reduce 24, reduce 33) on '-'
state 58
	stmt : KW_FOR '(' expr ';' . expr ';' expr ')'  (10)
	literal : .  (24)
	expr : .  (33)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	OPERATOR_LE  reduce 24
	OPERATOR_GE  reduce 24
	OPERATOR_EQ  reduce 24
	OPERATOR_NE  reduce 24
	OPERATOR_AND  reduce 24
	OPERATOR_OR  reduce 24
	';'  reduce 24
	'+'  reduce 24
	'-'  reduce 24
	'*'  reduce 24
	'/'  reduce 24

	factor  goto 30
	expr  goto 75
	literal  goto 22
	term  goto 32


state 59
	factor : '(' expr ')' .  (40)

	.  reduce 40


state 60
	stmt : TK_IDENTIFIER ':' type '=' . factor  (4)
	literal : .  (24)

	LIT_INTEGER  shift 15
	LIT_REAL  shift 16
	LIT_CHAR  shift 17
	LIT_STRING  shift 18
	'('  shift 19
	LIT_DOUBLE  shift 20
	';'  reduce 24

	factor  goto 76
	literal  goto 22


state 61
	stmt : TK_IDENTIFIER ':' type '[' . LIT_INTEGER ']' optinit  (5)

	LIT_INTEGER  shift 77
	.  error


state 62
	stmt : TK_IDENTIFIER '[' expr ']' . '=' expr  (7)

	'='  shift 78
	.  error


state 63
	expr : expr OPERATOR_LE term .  (30)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 30
	OPERATOR_GE  reduce 30
	OPERATOR_EQ  reduce 30
	OPERATOR_NE  reduce 30
	OPERATOR_OR  reduce 30
	';'  reduce 30
	']'  reduce 30
	')'  reduce 30
	'+'  reduce 30
	'-'  reduce 30


state 64
	expr : expr OPERATOR_GE term .  (31)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 31
	OPERATOR_GE  reduce 31
	OPERATOR_EQ  reduce 31
	OPERATOR_NE  reduce 31
	OPERATOR_OR  reduce 31
	';'  reduce 31
	']'  reduce 31
	')'  reduce 31
	'+'  reduce 31
	'-'  reduce 31


state 65
	expr : expr OPERATOR_EQ term .  (29)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 29
	OPERATOR_GE  reduce 29
	OPERATOR_EQ  reduce 29
	OPERATOR_NE  reduce 29
	OPERATOR_OR  reduce 29
	';'  reduce 29
	']'  reduce 29
	')'  reduce 29
	'+'  reduce 29
	'-'  reduce 29


state 66
	expr : expr OPERATOR_NE term .  (27)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 27
	OPERATOR_GE  reduce 27
	OPERATOR_EQ  reduce 27
	OPERATOR_NE  reduce 27
	OPERATOR_OR  reduce 27
	';'  reduce 27
	']'  reduce 27
	')'  reduce 27
	'+'  reduce 27
	'-'  reduce 27


state 67
	expr : expr OPERATOR_OR term .  (28)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 28
	OPERATOR_GE  reduce 28
	OPERATOR_EQ  reduce 28
	OPERATOR_NE  reduce 28
	OPERATOR_OR  reduce 28
	';'  reduce 28
	']'  reduce 28
	')'  reduce 28
	'+'  reduce 28
	'-'  reduce 28


state 68
	stmt : KW_IF '(' expr ')' KW_THEN . stmts optelse  (8)
	stmts : .  (3)

	KW_IF  shift 1
	KW_WHILE  shift 2
	KW_FOR  shift 3
	KW_READ  shift 4
	KW_RETURN  shift 5
	KW_PRINT  shift 6
	TK_IDENTIFIER  shift 7
	'{'  shift 8
	KW_ELSE  reduce 3
	';'  reduce 3

	stmts  goto 79
	stmt  goto 11


state 69
	expr : expr '+' term .  (25)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 25
	OPERATOR_GE  reduce 25
	OPERATOR_EQ  reduce 25
	OPERATOR_NE  reduce 25
	OPERATOR_OR  reduce 25
	';'  reduce 25
	']'  reduce 25
	')'  reduce 25
	'+'  reduce 25
	'-'  reduce 25


state 70
	expr : expr '-' term .  (26)
	term : term . '*' factor  (34)
	term : term . '/' factor  (35)
	term : term . OPERATOR_AND factor  (36)

	OPERATOR_AND  shift 54
	'*'  shift 55
	'/'  shift 56
	OPERATOR_LE  reduce 26
	OPERATOR_GE  reduce 26
	OPERATOR_EQ  reduce 26
	OPERATOR_NE  reduce 26
	OPERATOR_OR  reduce 26
	';'  reduce 26
	']'  reduce 26
	')'  reduce 26
	'+'  reduce 26
	'-'  reduce 26

